change it to tomcat 8 java 8 and maven 3.3.9