@@ -1,31 +1,17 @@
-FROM ubuntu:16.04
+FROM eclipse/stack-base:ubuntu
 EXPOSE 4403 8000 8080 9876 22
 
 LABEL che:server:8080:ref=tomcat8 che:server:8080:protocol=http che:server:8000:ref=tomcat8-debug che:server:8000:protocol=http che:server:9876:ref=codeserver che:server:9876:protocol=http
 
-ENV MAVEN_VERSION=3.0.5 \
-    JAVA_HOME=/usr/lib/jvm/java-6-oracle \
-    TOMCAT_HOME=/usr/local/tomcat6 \
-    TERM=xterm \
-    MAVEN_OPTS="-Xmx512m -XX:MaxPermSize=350m"
-ENV M2_HOME=/usr/local/apache-maven-$MAVEN_VERSION
+ENV MAVEN_VERSION=3.3.9 \
+    JAVA_HOME=/usr/lib/jvm/java-1.8.0-openjdk-amd64 \
+    TOMCAT_HOME=/home/user/tomcat8 \
+    TERM=xterm
+ENV M2_HOME=/home/user/apache-maven-$MAVEN_VERSION
 ENV PATH=$JAVA_HOME/bin:$M2_HOME/bin:$PATH
-ENV JAVA_VER 6
 
-RUN echo 'deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main' >> /etc/apt/sources.list && \
-    echo 'deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main' >> /etc/apt/sources.list && \
-    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C2518248EEA14886 && \
-    apt-get update && \
-	apt-get install -y wget && \
-    echo oracle-java${JAVA_VER}-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections && \
-    apt-get install -y --force-yes --no-install-recommends oracle-java${JAVA_VER}-installer oracle-java${JAVA_VER}-set-default && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists && \
-    rm -rf /var/cache/oracle-jdk${JAVA_VER}-installe && \
-	rm -rf /var/lib/apt/lists/*
-
-RUN mkdir "$TOMCAT_HOME" "$M2_HOME" && \
-    wget -qO- "http://apache.ip-connect.vn.ua/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz" | tar -zx --strip-components=1 -C "$M2_HOME"/ && \
-    wget -qO- "http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.24/bin/apache-tomcat-8.0.24.tar.gz" | tar -zx --strip-components=1 -C "$TOMCAT_HOME" && \
-    rm -rf "$TOMCAT_HOME"/webapps/* && \
-    echo "export MAVEN_OPTS=\$JAVA_OPTS" >> /usr/.bashrc
+RUN mkdir /home/user/tomcat8 /home/user/apache-maven-$MAVEN_VERSION && \
+    wget -qO- "http://apache.ip-connect.vn.ua/maven/maven-3/$MAVEN_VERSION/binaries/apache-maven-$MAVEN_VERSION-bin.tar.gz" | tar -zx --strip-components=1 -C /home/user/apache-maven-$MAVEN_VERSION/ && \
+    wget -qO- "http://archive.apache.org/dist/tomcat/tomcat-8/v8.0.24/bin/apache-tomcat-8.0.24.tar.gz" | tar -zx --strip-components=1 -C /home/user/tomcat8 && \
+    rm -rf /home/user/tomcat8/webapps/* && \
+    echo "export MAVEN_OPTS=\$JAVA_OPTS" >> /home/user/.bashrc
